tests/files/ok/StringInterpolation.krna


fn f() {
    let b = 1
    let a = '$b'
}
