tests/files/fail/RaiseNoThrowable.krna


fn f() {
    throw 1;
}